--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "node tutorial",
   "main": "src/app.js",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "npx nodemon"
   },
   "author": "Josh",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   }
