--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
+    "mongoose-unique-validator": "^5.0.0",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   }
